--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-        <h1 > Welcome Purshottam!!!!!!</h1>
+        <h1  style="color:blue;"> Welcome Purshottam!!!!!!</h1>
         <h1 > tyagi JI!!!!!!</h1>
         Hello,world!!
 
