--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
         <title>Hello!</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<style>h1{color:blue;}</style>
+<style>h1{color:blue123;}</style>
     </head>
     <body>
         <h1 > Welcome Purshottam</h1>
